@@ -6,11 +6,7 @@
 </head>
 <body class="extwin noscroll">
 
-<div id="topline">
-	<div class="topright">
-		<a href="#close" class="closelink" onclick="self.close()"><roundcube:label name="close" /></a>
-	</div>
-</div>
+<roundcube:include file="/includes/header.html" />
 
 <div id="mainscreen">
 
